@@ -16,6 +16,7 @@ trains=Trains
 train-stations=Train stations
 
 peak-power=Peak power production
+ores-produced=Ores produced
 items-produced=Items produced
 science-consumed=Science packs consumed
 
